--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.RecyclerViewActivity">
 
-        </activity>
+        <activity android:name=".activity.RecyclerViewActivity"></activity>
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +19,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ListViewActivity" />
+        <activity
+            android:name=".activity.StudentsDetailActivity"
+            android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
+            android:label="@string/loading" />
+
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
