--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.alex.studentsrecycler">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".activity.RecyclerViewActivity"></activity>
+        <activity android:name=".activity.RecyclerViewActivity" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,10 +21,21 @@
         <activity android:name=".activity.ListViewActivity" />
         <activity
             android:name=".activity.StudentsDetailActivity"
-            android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
-            android:label="@string/loading" />
+            android:label="@string/user_detail"
+            android:theme="@style/Base.Theme.AppCompat.Light.Dialog">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:host="github.com"
+                    android:scheme="https" />
+                <data
+                    android:host="plus.google.com"
+                    android:scheme="http" />
+            </intent-filter>
 
+        </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
